Crear activities y firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SignUp"
+            android:label="Registro"/>
+        <activity android:name=".SignUp_Vehicle"
+            android:label="Registrar Vehiculo"/>
+        <activity android:name=".SignUp_Propertie"
+            android:label="Registrar Propiedad"></activity>
     </application>
 
 </manifest>
