--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,11 @@
             android:name=".Registro_Propiedad"
             android:label="Registrar Propiedad" />
         <activity android:name=".MainMenu" />
-        <activity android:name=".PredenunciaActivity"></activity>
+        <activity android:name=".PredenunciaActivity" />
+        <activity
+            android:name=".GestionActivity"
+            android:label="@string/title_activity_gestion"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
