--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.0.0'
     compile 'com.android.support:design:26.+'
     compile 'com.ncorti:slidetoact:0.2.0'
+    compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
+    compile 'com.github.medyo:fancybuttons:1.8.4'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
