--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:label="@string/title_activity_gestion"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".Emergencia"
+        <activity android:name=".EmergenciaActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".Fragments.pop"
             android:theme="@style/AppTheme.CustomTheme"
