--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.ncorti:slidetoact:0.2.0'
     compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
     compile 'com.github.medyo:fancybuttons:1.8.4'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
