--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".Registro"
             android:label="Registro"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".MainMenu"
             android:screenOrientation="portrait" />
@@ -37,7 +38,10 @@
         <activity
             android:name=".EmergenciaActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".addDocument"></activity>
+        <activity android:name=".addDocument"
+            android:screenOrientation="portrait"></activity>
+        <uses-permission android:name="android.permission.CAMERA"> </uses-permission>
+
     </application>
 
 </manifest>
