--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     compile 'com.ncorti:slidetoact:0.2.0'
     compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
     compile 'com.github.medyo:fancybuttons:1.8.4'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.github.florent37:materialtextfield:1.0.7'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
